<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/backgroundColor"
    tools:context=".SettingsFragment"
    android:padding="24dp">


    <Switch
        android:id="@+id/switchTheme"
        android:layout_width="363dp"
        android:layout_height="wrap_content"
        android:text="@string/settings_theme"
        android:textOff="@string/settings_theme_dark"
        android:textOn="@string/settings_theme_light" />

    <Button
        android:id="@+id/button_aboutApp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/settings_about" />
</LinearLayout>