<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/backgroundColor"
    tools:context=".AboutAppFragment">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:text="@string/settings_about"
        android:textColor="?attr/textColor"
        android:textSize="40dp"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="80dp"
        android:textStyle="bold"/>


    <TextView
        android:id="@+id/aboutAppText"
        android:layout_width="347dp"
        android:layout_height="161dp"
        android:layout_marginTop="28dp"
        android:text="@string/about_app"
        android:textColor="?attr/textColor"
        android:textSize="21dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/authors"
        android:textSize="25dp"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        tools:layout_editor_absoluteX="92dp"
        android:textStyle="italic"/>

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="194dp"
        android:layout_height="245dp"
        android:layout_marginTop="48dp"
        android:src="@drawable/icon8_tea"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/aboutAppText" />


</androidx.constraintlayout.widget.ConstraintLayout>